feat: prepare new catalog feature
